# visulinx-api

./: .env-example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  fly.toml  pyproject.toml
app/: api.py  database.py  models.py  schemas.py  security.py  settings.py
app/routers/: auth.py  organizations.py  preferences.py  projects.py  todos.py  users.py
app/services/: ai_service.py  document_service.py  upload_service.py
fast_zero/: database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 202411201518-52f686c9d3c7_init_db.py  202411211417-4127ed6f6cf2_add_organizations_and_projects_tables.py  202411251423-a20f542882f7_add_files_table.py  202411251733-e1f919c1c0d4_add_files_table.py  202411260918-90a4f1ff4dfe_add_deleted_at_to_projects.py  202412210840-68de9da0961b_add_contents_to_file_table.py  202412211056-f6b2d59ed89a_update_files_table.py  202412270635-59f0de858d13_create_preferences_table.py
scripts/: shrinkpdf
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_organizations.py  test_projects.py  test_security.py  test_todos.py  test_upload_service.py  test_users.py
